@@ -64,28 +64,6 @@ AM_GST_ELEMENT_CHECK(flacenc,,AC_MSG_WARN([The 'flacenc' element was not found. 
 AM_GST_ELEMENT_CHECK(wavenc,,AC_MSG_WARN([The 'wavenc' element was not found. This will cause encoding to Wave to fail.]))
 AM_GST_ELEMENT_CHECK(filesink,,AC_MSG_WARN([The 'filesink' element was not found. This will cause Sound Juicer to fail at runtime.]))
 
-# Linux/HAL support
-# Stolen from nautilus-cd-burner
-HAL_REQUIRED=0.2.98
-AC_ARG_ENABLE(hal, AC_HELP_STRING([--enable-hal],[use hal, if available]),
-[case "${enableval}" in
-yes) ENABLE_HAL=yes ;;
-no)  ENABLE_HAL=no ;;
-*) AC_MSG_ERROR(bad value ${enableval} for --enable-hal) ;;
-esac],
-[ENABLE_HAL=no]) dnl Default value
-
-AC_MSG_CHECKING([whether to use HAL])
-if test "x$ENABLE_HAL" = "xyes"; then
-        AC_MSG_RESULT([yes])
-       AC_DEFINE([USE_HAL], 1, [Use the HAL library])
-       PKG_CHECK_MODULES(HAL, hal >= $HAL_REQUIRED)
-       AC_SUBST(HAL_CFLAGS)
-       AC_SUBST(HAL_LIBS)
-else
-        AC_MSG_RESULT([no. Pass --enable-hal to use HAL.])
-fi
-
 # Find GNOME Media Profiles
 PKG_CHECK_MODULES(MEDIA_PROFILES, gnome-media-profiles)
 AC_SUBST(MEDIA_PROFILES_CFLAGS)
