@@ -5,7 +5,7 @@ AM_CPPFLAGS = \
 	-DG_DISABLE_DEPRECATED=1 \
 	-I$(top_srcdir)/src \
 	@MUSICBRAINZ_CFLAGS@ @GSTREAMER_CFLAGS@ \
-	@MEDIA_PROFILES_CFLAGS@ @BURN_CFLAGS@ @UI_CFLAGS@ @HAL_CFLAGS@
+	@MEDIA_PROFILES_CFLAGS@ @BURN_CFLAGS@ @UI_CFLAGS@
 
 AM_CFLAGS = -g -Wall -export-dynamic -Wunused
 
@@ -18,4 +18,4 @@ mb_test_SOURCES = \
 	$(top_srcdir)/src/sj-metadata-marshal.c \
 	$(top_srcdir)/src/sj-error.c
 
-mb_test_LDADD = @BURN_LIBS@ @UI_LIBS@ @MUSICBRAINZ_LIBS@ @HAL_LIBS@
+mb_test_LDADD = @BURN_LIBS@ @UI_LIBS@ @MUSICBRAINZ_LIBS@
