@@ -4,6 +4,11 @@
 	* NEWS:
 	Version 2.9.91.
 
+	* configure.in:
+	* src/Makefile.am:
+	* tests/Makefile.am:
+	Remove --enable-hal option
+
 2005-02-07  Ross Burton  <ross@burtonini.com>
 
 	* data/sound-juicer.glade:
